stylesheet.css
/* ... */
#cart-icon {
    position: relative;
    top: 0.2vw;
    font-size:1.8vw;
    cursor: pointer;
    color: white;

}


.bag-quantity {
    position: relative;
    text-align: center;
    color: white;
    font-size:1vw;
    font-weight: 600;
    font-family: 'Press Start 2P', cursive;

}

/*Billing form*/


#close-billing {
    position: absolute;
    top: 0.2rem;
    right: 0.2rem;
    font-size: 2rem;
    cursor: pointer;
}


.billing-container.disable {
    position: absolute;
    background: rgba(0, 0, 0, 0);

    visibility: hidden;

    transition: .5s;
}

.billing-container {
    position: absolute;
    background: rgba(0, 0, 0, 0.5);
    top: 0;

    width: 100%;
    height: 100%;

    z-index: 100;

    transition: 2.5s;

}

.billing-form.disable {
    margin: 20% auto;
    opacity: 0;
}

.billing-form {

    width:  65%;
    height: auto;

    position: sticky;
    align-items: center;
    justify-content: center;
    top: 0;
    left: 0;
    right: 0;
    margin: 10% auto;

    background: white;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    border-radius: 2%;
    overflow: hidden;

    font-family: 'Open Sans', sans-serif;
    z-index: 101;

    opacity: 1;

    transition: 0.5s;
}



.billing-details {
    width: 100%;
    margin: 0 auto;
}

.checkout-form {
    display: grid;
    margin: 0 auto;
    grid-template-columns: repeat(auto-fill, minmax(490px,auto));
}

.form {

    padding: 30px 40px;
}

.billing-title {
    background: #447caa;
    border-bottom: 1px solid #F0F0F0;

    text-align: center;
    padding: 20px 40px;
}

.billing-title h2 {
    margin: 0;
}


.form-control {
    margin-bottom: 10px;
    padding-bottom: 20px;
    position: relative;
}


.form-control label {
    display: inline-block;
    margin-bottom: 5px;
}

.form-control input {
    border: 1px solid lightgrey;
    border-radius: 4px;
    display: block;
    padding: 10px;
    margin: 0 0 10px 0;
    font-family: inherit;
    font-size: 14px;
    width: 100%;
}

.form-control.success input {
    border-color: springgreen;
}
.form-control.success i.bxs-check-circle {
    color: springgreen;
    visibility: visible;
}

.form-control.error input {
    border-color: indianred;
}

.form-control.error i.bxs-error-circle {
    color: indianred;
    visibility: visible;
}


.form-control i {
    position: absolute;
    top: 36px;
    right: 5px;
    font-size: 25px;
    visibility: hidden;
}

.form-control small {
    position: absolute;
    bottom: 0;
    right: 0;
    visibility: hidden;
}
.form-control.error small {
    color: indianred;
    visibility: visible;
}

#active small {
    font-size: 11px;
    font-weight: 600;
    color: darkgrey;
    visibility: visible;
}


.form-buttons {
    display: grid;
    column-gap: 2.5em;
    grid-template-columns: repeat(2, auto);
}

.form button[type=submit] {
    background-color: darkred;
    border: 2px solid darkred;
    color: white;

    display: block;
    border-radius: 4px;
    margin: 10px auto;

    font-family: inherit;
    font-size: 16px;
    padding: 5px;
    width: 100%;

    cursor: pointer;
}

.form button[type=reset] {
    background-color: grey;
    border: 2px solid grey;
    color: white;

    display: block;
    border-radius: 4px;
    margin: 10px auto;

    font-family: inherit;
    font-size: 16px;
    padding: 10px;
    width: 100%;

    cursor: pointer;
}




/*billing form end*/

/*Credit card styes*/

.card {
    width: 90%;
    height: 90%;

    padding: 50px;
    border: 0.12rem solid grey;

    margin: 30px auto;

}


.card-row {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding-bottom: 2rem;
}

.card-title {
    font-weight: 600;
    font-size: 1.5vw;
    color: #172339;
    margin: 0 0 3rem 0 ;
    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
}

.card-col {
    padding-right: 2rem;
    margin-bottom: 2rem;
}

.card-input {

    width: 5vw;

    background: none;
    border: none;
    border-bottom: 0.125rem dashed grey;

    font-size: 1.2rem;
    color: black;

    margin: 0 10px;
    text-align: center;
}

.card-input-large {
    width: 100%;
    font-size: 1.6rem;
    text-align: left;
    padding: 0 10px;
    margin-bottom: 20px;
}

.card-input:focus {
    outline: none;
    border-color: dimgrey;
}

.card-input:disabled {
    background: lightgrey;
    border: 2px solid lightgrey;
    border-radius: 4px;
    cursor: not-allowed;
}

#checkout:disabled {
    background: lightgrey;
    color: grey;
    border: 2px solid lightgrey;
    border-radius: 4px;
    cursor: not-allowed;
}

.billing button[type=checkout] {
    background-color: darkred;
    border: 2px solid darkred;
    color: white;

    display: block;
    border-radius: 4px;
    margin: 10px auto;

    font-family: inherit;
    font-size: 16px;
    padding: 5px;
    width: 100%;

    cursor: pointer;
}


/*end card styles*/


/*Staff*/

.Staff {
    width: 75%;
    margin: 0 auto;
}

.mainStaff {
    width: 15vw;
    max-height: 10vw;

    margin: 40px;
}

.bottomStaff {
    display: grid;
    grid-template-columns: repeat(2, minmax(30px, 18vw));
}
.bottomStaff img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.sideStaff {
    margin: 0 5vw;
    width: 50vw;
    font-size: 0.7vw;
}
/*End of Staff*/

/*cart*/
.cart {
    position: fixed;
    top: 0;
    right: -100%;
    width: 360px;
    min-height: 100vh;
    padding: 20px;
    background: white;

    z-index: 100;

    box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
    -webkit-box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
    -moz-box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);

    transition: 0.3s;
}

.cart.active {
    right: 0;
}


.cart-title {
    text-align: center;
    font-size: 1.5rem;
    font-weight: 600;
    margin-top: 2rem;
}

.cart-box {
   display: grid;
    grid-template-columns: 32% 50% 18%;
    align-items: center;
    gap: 1rem;
    margin-top: 1rem;
}
/* ... */

